--- a/tensorflow-developer/C1-Intro-to-TensorFlow-for-AI-ML-and-DL/C1_W1_Assignment.ipynb
+++ b/tensorflow-developer/C1-Intro-to-TensorFlow-for-AI-ML-and-DL/C1_W1_Assignment.ipynb
@@ -81,6 +81,10 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "tags": [
      "graded"
     ]
@@ -2150,7 +2154,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -2164,7 +2168,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
