--- a/tensorflow-developer/C1-Intro-to-TensorFlow-for-AI-ML-and-DL/C1_W3_Assignment.ipynb
+++ b/tensorflow-developer/C1-Intro-to-TensorFlow-for-AI-ML-and-DL/C1_W3_Assignment.ipynb
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {
     "tags": [
      "graded"
@@ -233,13 +233,13 @@
     "    # Define the model\n",
     "    model = tf.keras.models.Sequential([\n",
     "        # convolutional layer\n",
-    "        tf.keras.layers.Conv2D(64, (3,3), activation=tf.nn.relu),\n",
+    "        tf.keras.layers.Conv2D(32, (3,3), activation=tf.nn.relu, input_shape=(28, 28, 1)),\n",
     "        # maxpool layer\n",
     "        tf.keras.layers.MaxPooling2D(2,2),\n",
     "        \n",
     "        # fully connected layers\n",
     "        tf.keras.layers.Flatten(),\n",
-    "        tf.keras.layers.Dense(512, activation=tf.nn.relu),\n",
+    "        tf.keras.layers.Dense(128, activation=tf.nn.relu),\n",
     "        tf.keras.layers.Dense(10, activation=tf.nn.softmax)\n",
     "    ]) \n",
     "\n",
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {
     "tags": [
      "graded"
@@ -267,15 +267,19 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/10\n",
-      "1875/1875 [==============================] - 151s 80ms/step - loss: 0.1179 - accuracy: 0.9642\n",
+      "1875/1875 [==============================] - 34s 18ms/step - loss: 0.1545 - accuracy: 0.9537\n",
       "Epoch 2/10\n",
-      "1875/1875 [==============================] - 146s 78ms/step - loss: 0.0373 - accuracy: 0.9884\n",
+      "1875/1875 [==============================] - 33s 18ms/step - loss: 0.0520 - accuracy: 0.9842\n",
       "Epoch 3/10\n",
-      "1875/1875 [==============================] - 150s 80ms/step - loss: 0.0224 - accuracy: 0.9927\n",
+      "1875/1875 [==============================] - 33s 18ms/step - loss: 0.0318 - accuracy: 0.9907\n",
       "Epoch 4/10\n",
-      "1875/1875 [==============================] - ETA: 0s - loss: 0.0135 - accuracy: 0.9958\n",
+      "1875/1875 [==============================] - 33s 18ms/step - loss: 0.0227 - accuracy: 0.9929\n",
+      "Epoch 5/10\n",
+      "1875/1875 [==============================] - 33s 18ms/step - loss: 0.0159 - accuracy: 0.9949\n",
+      "Epoch 6/10\n",
+      "1870/1875 [============================>.] - ETA: 0s - loss: 0.0108 - accuracy: 0.9966\n",
       "Reached 99.5% accuracy so cancelling training!\n",
-      "1875/1875 [==============================] - 151s 81ms/step - loss: 0.0135 - accuracy: 0.9958\n"
+      "1875/1875 [==============================] - 33s 18ms/step - loss: 0.0108 - accuracy: 0.9966\n"
      ]
     }
    ],
@@ -299,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {
     "tags": [
      "graded"
@@ -310,7 +314,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Your model was trained for 4 epochs\n"
+      "Your model was trained for 6 epochs\n"
      ]
     }
    ],
@@ -329,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
