--- a/tensorflow-developer/C3-Natural-Language-Processing-in-TensorFlow/C3W1_Assignment.ipynb
+++ b/tensorflow-developer/C3-Natural-Language-Processing-in-TensorFlow/C3W1_Assignment.ipynb
@@ -546,7 +546,7 @@
  "metadata": {
   "dlai_version": "1.2.0",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -560,7 +560,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
